# deshader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  NOTICE.md  NOTICES.md  README.md  build.zig  build.zig.zon  emaily  fix_c_import.ps1  fix_c_import.sh  fix_wolfssl.sh  types.txt  vcpkg-configuration.json  vcpkg.json  zlint.json
.github/workflows/: packages.yml  release.yml
bootstrap/: Makefile  compress.zig  dependencies.zig  deshader-fix.c  generate_headers.zig  generate_stubs.zig  list_gl_procs.zig  options.zig  strip_comments.cpp  zig-fix.h
bootstrap/ports/glew/: crt.patch  portfile.cmake  vcpkg.json
bootstrap/ports/glfw3/: portfile.cmake  vcpkg.json
bootstrap/ports/glslang-no-hlsl/: CMakeLists.txt.patch  portfile.cmake  vcpkg.json
bootstrap/ports/nativefiledialog/: CMakeLists.txt  portfile.cmake  vcpkg.json
bootstrap/ports/vulkan/: portfile.cmake
bootstrap/ports/vulkan-loader/: crt.patch  portfile.cmake
bootstrap/ports/wolfssl/: portfile.cmake  vcpkg.json
bootstrap/toolchain/: x64-osx-zig.cmake  x64-windows-cross.cmake  x64-windows-zig.cmake  x86-windows-zig.cmake  zig.cmake
bootstrap/tools/: LICENSE
bootstrap/triplets/: x64-linux-zig.cmake  x64-osx-zig.cmake  x64-windows-cross-dbg.cmake  x64-windows-cross-rel.cmake  x64-windows-cross.cmake  x64-windows-zig-dbg.cmake  x64-windows-zig-rel.cmake  x86-windows-zig-dbg.cmake  x86-windows-zig-rel.cmake  zig.cmake
doc/: Commands.md
editor/: README.md  bun.lockb  index.html  index.ts  package.json  product.json  required.txt  tsconfig.tsbuildinfo
example/: example.zig
examples/: LICENSE  abi.cpp  debug_commands.cpp  editor.zig  editor_linked.cpp  engine.zig  examples.zig  fragment.frag  glfw.cpp  glfw.zig  linked.cpp  linked.zig  quad.cpp  quad.zig  resources.h  sdf.frag  sdf.zig  shaders.rc  vertex.vert
guide/: API.md  C-API.md  Commands.md  GUI.md  README.md  Settings.md  Shaders.md  Storage.drawio  Virtual Filesystem.md
headers/: deshader.h
libs/: glsl_analyzer.zig  mac-fallback.txt
src/: backends.zig  commands.zig  common.zig  declarations.zig  log.zig  main.zig  resources.rc
src/backends/: gl.zig  gl_instruments.zig  loaders.zig  transitive.zig
src/common/: arch.zig  array_buf_map.zig  env.zig  event.zig  log.zig  memory.zig  process.zig  types.zig  waiter.zig
src/declarations/: commands.h  instrumentation.zig  instruments.zig  macros.h  shaders.zig  types.zig
src/interceptors/: gl_shaders.zig  loaders.zig  shaders.zig  transitive.zig
src/launcher/: analysis.zig  extended_wv.zig  gui.zig  launcher.html  launcher.zig
src/services/: analysis.zig  array_buf_map.zig  debug.zig  instrumentation.zig  instruments.zig  processor.zig  sema.zig  shaders.zig  storage.zig
src/tools/: editor.zig  extended_wv.zig  forward.zig  generate_header.zig  generate_stubs.zig  gui.zig  run.html  run.zig  shrink.zig  symbol_enumerator.cc
